--- a/style.css
+++ b/style.css
@@ -32,3 +32,27 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.sectionContentText{
+  color: aliceblue;
+  padding: 10px;
+  margin: 0px;
+  width: 35%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sectionDivider {
+  margin: 0px;
+  background-color: rgb(34, 86, 159);
+  text-align: center;
+  height: fit-content;
+}
+
+.sectionContentDivider {
+  margin: 0px;
+  background-color: rgb(39, 100, 184);
+  text-align: center;
+  height: fit-content;
+  display: flex;
+}
