--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ body, html {
   background-size: cover;
 }
 
+.sectionTextTopMargin{
+  color: aliceblue;
+  padding: 10px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .sectionContentText{
   color: aliceblue;
   padding: 10px;
@@ -44,7 +52,7 @@ body, html {
 
 .sectionDivider {
   margin: 0px;
-  background-color: rgb(34, 86, 159);
+  background-color: rgb(34, 86, 165);
   text-align: center;
   height: fit-content;
 }
